--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
         integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">
-    <link rel="icon" type="image/png" href="backend/components/Favicon.png">
-    <link rel="apple-touch-icon" href="backend/components/Favicon.png">
-    <link rel="shortcut icon" href="backend/components/Favicon.png" type="image/png">
+    <link rel="icon" type="image/png" href="https://res.cloudinary.com/dmesnfesj/image/upload/v1759908316/Favicon_h767nr.png">
+    <link rel="apple-touch-icon" href="https://res.cloudinary.com/dmesnfesj/image/upload/v1759908316/Favicon_h767nr.png">
+    <link rel="shortcut icon" href="https://res.cloudinary.com/dmesnfesj/image/upload/v1759908316/Favicon_h767nr.png" type="image/png">
     <link rel="preload" href="frontend/fonts/Tan-Pearl-Font/" as="font" type="font/woff" crossorigin>
   <link rel="preload" href="frontend/fonts/Cutta-Font-Family/" as="font" type="font/woff" crossorigin>
   <link rel="preload" href="frontend/fonts/Raglien-Font/" as="font" type="font/woff" crossorigin>
@@ -93,7 +93,7 @@
     <div class="ribbon">🔥Join Free Community | <a href="https://nas.io/brigade-store.memberships.in" class="comm">
             Click here</a></div>
     <header><br><br>
-        <a href="index.html" class="logo"><img src="backend/components/Kanglasa.svg.png" alt="Kanglasha">KANGLASHA</a>
+        <a href="index.html" class="logo"><img src="https://res.cloudinary.com/dmesnfesj/image/upload/v1759908327/Kanglasa.svg_jugx9c.png" alt="Kanglasha">KANGLASHA</a>
         <ul class="navmenu">
             <li><a href="index.html">Home</a></li>
             <li><a href="BOOKS.html">Shop</a></li>
@@ -164,7 +164,7 @@
             <p>"Information Is Wealth"</p>
 
             <a href="BOOKS.html" class="main-btn">Shop Now <i class='bx bx-right-arrow-alt'></i></a><br><br>
-            <button class="cssbuttons-io-button" id="downloadBtn">
+            <!-- <button class="cssbuttons-io-button" id="downloadBtn">
                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24">
                     <path fill="none" d="M0 0h24v24H0z"></path>
                     <path fill="currentColor"
@@ -175,7 +175,7 @@
             </button>
 
 
-            <br> <i>*The app has been ceased due to technical miss-alignment. Will be available momentarily.</i>
+            <br> <i>*The app has been ceased due to technical miss-alignment. Will be available momentarily.</i> -->
         </div>
         <div class="down-arrow">
             <a href="#ep" class="down"><i class='bx bx-down-arrow-alt'></i></a>
@@ -193,7 +193,7 @@
 
             <div class="product-item">
                 <a href="SH014.html">
-                    <img src="Cantt-Hurt-Me-By-David-Goggins.jpg" alt="Cantt-Hurt-Me-By-David-Goggins">
+                    <img src="https://res.cloudinary.com/dmesnfesj/image/upload/v1759908129/Cantt-Hurt-Me-By-David-Goggins_lrot0i.jpg" alt="Cantt-Hurt-Me-By-David-Goggins">
                     <div class="product-details">
                         <h4>Can't Hurt Me By David Goggins</h4>
                         <p>182 INR</p>
@@ -203,7 +203,7 @@
 
             <div class="product-item">
                 <a href="SH002.html">
-                    <img src="The-Psychology-Of-Money-By-Morgan-Housel.jpg"
+                    <img src="https://res.cloudinary.com/dmesnfesj/image/upload/v1759908177/The-Psychology-Of-Money-By-Morgan-Housel_lqrkkm.jpg"
                         alt="The-Psychology-Of-Money-By-Morgan-Housel">
                     <div class="product-details">
                         <h4>The Psychology Of Money By Morgan Housel</h4>
@@ -214,7 +214,7 @@
         
             <div class="product-item">
                 <a href="SH006.html">
-                    <img src="How-to-win-friends-and-influence-people.jpeg"
+                    <img src="https://res.cloudinary.com/dmesnfesj/image/upload/v1759908147/How-to-win-friends-and-influence-people_apzb9s.jpg"
                         alt="How-to-win-friends-and-influence-people">
                     <div class="product-details">
                         <h4>How To Win Friends And Influence People By Dale Carnegie</h4>
@@ -225,7 +225,7 @@
 
             <div class="product-item">
                 <a href="SH007.html">
-                    <img src="The-Subtle-Art-Of-Not-Giving-A-Fuck-By-Mark-Manson.jpg"
+                    <img src="https://res.cloudinary.com/dmesnfesj/image/upload/v1759908178/The-Subtle-Art-Of-Not-Giving-A-Fuck-By-Mark-Manson_qfepxd.jpg"
                         alt="The-Subtle-Art-Of-Not-Giving-A-Fuck-By-Mark-Manson">
                     <div class="product-details">
                         <h4>The Subtle Art Of Not Giving A Fuck By Mark Manson</h4>
@@ -236,7 +236,7 @@
 
             <div class="product-item">
                 <a href="SH016.html">
-                    <img src="The-Concise-48-Laws-Of-Power-By-Robert-Greene.jpeg" alt="The-Concise-48-Laws-Of-Power-By-Robert-Greene">
+                    <img src="https://res.cloudinary.com/dmesnfesj/image/upload/v1759908167/The-Concise-48-Laws-Of-Power-By-Robert-Greene_ttsb37.jpg" alt="The-Concise-48-Laws-Of-Power-By-Robert-Greene">
                     <div class="product-details">
                         <h4>The Concise 48 Laws Of Power By Robert Greene</h4>
                         <p>166 INR</p>
@@ -246,7 +246,7 @@
 
             <div class="product-item">
                 <a href="SH003.html">
-                    <img src="Think-And-Grow-Rich-By-Napoleon-Hill.jpg" alt="Think-And-Grow-Rich-By-Napoleon-Hill">
+                    <img src="https://res.cloudinary.com/dmesnfesj/image/upload/v1759908198/Think-And-Grow-Rich-By-Napoleon-Hill_ctc4u9.jpg" alt="Think-And-Grow-Rich-By-Napoleon-Hill">
                     <div class="product-details">
                         <h4>Think And Grow Rich By Napoleon Hill</h4>
                         <p>109 INR</p>
@@ -266,9 +266,9 @@
     <section class="contact" id="contact">
         <div class="contact-info">
             <div class="first-info">
-                <img src="Logo.png" alt="Brigade Store Logo">
+                <img src="https://res.cloudinary.com/dmesnfesj/image/upload/v1759908327/Kanglasa.svg_jugx9c.png" alt="Kanglasha Logo">
                 <p>Noonmati, Guwahati, <br>Assam - 781020</p>
-                <p>+91 88226 75694</p>
+                <p>+91 92310 96949</p>
                 <p>brigadestorevandam.reply@gmail.com</p>
                 <div class="social-icon">
                     <a href="https://www.instagram.com/vandam.io/"><i class='bx bxl-instagram'></i></a>
@@ -294,7 +294,7 @@
     </section>
 
     <div class="end-text">
-        <p>©Brigade Store 2025. All Rights Reserved.</p>
+        <p>©Kanglasha 2025. All Rights Reserved.</p>
     </div>
 
     <script src="frontend/javascript/script.js"></script>
