--- a/BOOKS.html
+++ b/BOOKS.html
@@ -6,6 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Shop - Kanglasha</title>
     <link rel="stylesheet" href="frontend/css/books.css">
+    <link rel="stylesheet" href="frontend/css/font.css">
+    <link rel="preload" href="frontend/fonts/Tan-Pearl-Font/" as="font" type="font/woff" crossorigin>
+    <link rel="preload" href="frontend/fonts/Cutta-Font-Family/" as="font" type="font/woff" crossorigin>
+    <link rel="preload" href="frontend/fonts/Raglien-Font/" as="font" type="font/woff" crossorigin>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
         integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
