--- a/BOOKS.html
+++ b/BOOKS.html
@@ -95,7 +95,7 @@
         <div class="product-container">
 
             <div class="product-item">
-                <a href="SH001.html">
+                <a href="productPages/SH/SH001.html">
                     <img src="https://res.cloudinary.com/dmesnfesj/image/upload/v1759908126/Atomic-Habits-by-James-Clear_cdkkbv.jpg" alt="Atomic-Habits-by-James-Clear">
                     <div class="product-details">
                         <h4>Atomic Habits by James Clear</h4>
@@ -105,7 +105,7 @@
             </div>
 
             <div class="product-item">
-                <a href="SH002.html">
+                <a href="productPages/SH/SH002.html">
                     <img src="https://res.cloudinary.com/dmesnfesj/image/upload/v1759908177/The-Psychology-Of-Money-By-Morgan-Housel_lqrkkm.jpg"
                         alt="The-Psychology-Of-Money-By-Morgan-Housel">
                     <div class="product-details">
@@ -116,7 +116,7 @@
             </div>
 
             <div class="product-item">
-                <a href="SH003.html">
+                <a href="productPages/SH/SH003.html">
                     <img src="https://res.cloudinary.com/dmesnfesj/image/upload/v1759908198/Think-And-Grow-Rich-By-Napoleon-Hill_ctc4u9.jpg" alt="Think-And-Grow-Rich-By-Napoleon-Hill">
                     <div class="product-details">
                         <h4>Think And Grow Rich By Napoleon Hill</h4>
@@ -126,7 +126,7 @@
             </div>
 
             <div class="product-item">
-                <a href="SH004.html">
+                <a href="productPages/SH/SH004.html">
                     <img src="https://res.cloudinary.com/dmesnfesj/image/upload/v1759908177/The-Richest-Man-In-Babylon-By-George-S.-Clason_qzz2vt.jpg" alt="The-Richest-Man-In-Babylon-By-George-S.-Clason">
                     <div class="product-details">
                         <h4>The Richest Man In Babylon By George S. Clason</h4>
