--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
             <a href="t&c.html">
                 <li>Terms& Conditions</li>
             </a>
-            <a href="https://vandam-sfsguwahati.github.io/sfsncc-digiportal.github.io/aboutthedev.html">
+            <a href="https://vandamdev.vercel.app">
                 <li>About The Developer</li>
             </a>
             <a href="https://github.com/lightbrigadeofficial/Brigade-Store">
@@ -191,7 +191,7 @@
         <div class="product-container">
 
             <div class="product-item">
-                <a href="SH014.html">
+                <a href="/productPages/SH/SH014.html">
                     <img src="https://res.cloudinary.com/dmesnfesj/image/upload/v1759908129/Cantt-Hurt-Me-By-David-Goggins_lrot0i.jpg" alt="Cantt-Hurt-Me-By-David-Goggins">
                     <div class="product-details">
                         <h4>Can't Hurt Me By David Goggins</h4>
@@ -201,7 +201,7 @@
             </div>
 
             <div class="product-item">
-                <a href="SH002.html">
+                <a href="productPages/SH/SH002.html">
                     <img src="https://res.cloudinary.com/dmesnfesj/image/upload/v1759908177/The-Psychology-Of-Money-By-Morgan-Housel_lqrkkm.jpg"
                         alt="The-Psychology-Of-Money-By-Morgan-Housel">
                     <div class="product-details">
@@ -212,7 +212,7 @@
             </div>
         
             <div class="product-item">
-                <a href="SH006.html">
+                <a href="productPages/SH/SH006.html">
                     <img src="https://res.cloudinary.com/dmesnfesj/image/upload/v1759908147/How-to-win-friends-and-influence-people_apzb9s.jpg"
                         alt="How-to-win-friends-and-influence-people">
                     <div class="product-details">
@@ -223,7 +223,7 @@
             </div>
 
             <div class="product-item">
-                <a href="SH007.html">
+                <a href="/productPages/SH/SH007.html">
                     <img src="https://res.cloudinary.com/dmesnfesj/image/upload/v1759908178/The-Subtle-Art-Of-Not-Giving-A-Fuck-By-Mark-Manson_qfepxd.jpg"
                         alt="The-Subtle-Art-Of-Not-Giving-A-Fuck-By-Mark-Manson">
                     <div class="product-details">
@@ -234,7 +234,7 @@
             </div>
 
             <div class="product-item">
-                <a href="SH016.html">
+                <a href="productPages/SH/SH016.html">
                     <img src="https://res.cloudinary.com/dmesnfesj/image/upload/v1759908167/The-Concise-48-Laws-Of-Power-By-Robert-Greene_ttsb37.jpg" alt="The-Concise-48-Laws-Of-Power-By-Robert-Greene">
                     <div class="product-details">
                         <h4>The Concise 48 Laws Of Power By Robert Greene</h4>
@@ -244,7 +244,7 @@
             </div>
 
             <div class="product-item">
-                <a href="SH003.html">
+                <a href="productPages/SH/SH003.html">
                     <img src="https://res.cloudinary.com/dmesnfesj/image/upload/v1759908198/Think-And-Grow-Rich-By-Napoleon-Hill_ctc4u9.jpg" alt="Think-And-Grow-Rich-By-Napoleon-Hill">
                     <div class="product-details">
                         <h4>Think And Grow Rich By Napoleon Hill</h4>
@@ -285,7 +285,7 @@
 
             <div class="third-info">
                 <h4>Miscellaneous</h4>
-                <p><a href="https://vandam-sfsguwahati.github.io/sfsncc-digiportal.github.io/aboutthedev.html">About The
+                <p><a href="https://vandamdev.vercel.app">About The
                         Developer</a></p>
                 <p><a href="sitemap.html">Site Map</a></p>
             </div>
