--- a/BOOKS.html
+++ b/BOOKS.html
@@ -136,7 +136,7 @@
             </div>
 
             <div class="product-item">
-                <a href="SH005.html">
+                <a href="productPages/SH/SH005.html">
                     <img src="https://res.cloudinary.com/dmesnfesj/image/upload/v1759908176/The-Power-Of-Your-Subconcious-Mind-By-Dr-Joseph-Murphy_jwklto.jpg"
                         alt="The-Power-Of-Your-Subconcious-Mind-By-Dr-Joseph-Murphy">
                     <div class="product-details">
@@ -147,7 +147,7 @@
             </div>
 
             <div class="product-item">
-                <a href="SH006.html">
+                <a href="productPages/SH/SH006.html">
                     <img src="https://res.cloudinary.com/dmesnfesj/image/upload/v1759908147/How-to-win-friends-and-influence-people_apzb9s.jpg"
                         alt="How-to-win-friends-and-influence-people">
                     <div class="product-details">
