--- a/productPages/SH/SH004.html
+++ b/productPages/SH/SH004.html
@@ -46,10 +46,10 @@
     </section>
 
     <div class="end-text">
-        <p>©Brigade Store 2025. All Rights Reserved.</p>
+        <p>©Kanglasha 2025. All Rights Reserved.</p>
     </div>
 
-    <script src="sscript.js"></script>
+    <script src="../../frontend/javascript/sscript.js"></script>
 </body>
 
 </html>
