--- a/BOOKS.html
+++ b/BOOKS.html
@@ -158,7 +158,7 @@
             </div>
 
             <div class="product-item">
-                <a href="SH007.html">
+                <a href="productPages/SH/SH007.html">
                     <img src="https://res.cloudinary.com/dmesnfesj/image/upload/v1759908178/The-Subtle-Art-Of-Not-Giving-A-Fuck-By-Mark-Manson_qfepxd.jpg"
                         alt="The-Subtle-Art-Of-Not-Giving-A-Fuck-By-Mark-Manson">
                     <div class="product-details">
@@ -169,7 +169,7 @@
             </div>
 
             <div class="product-item">
-                <a href="SH008.html">
+                <a href="/productPages/SH/SH008.html">
                     <img src="https://res.cloudinary.com/dmesnfesj/image/upload/v1759908165/Rich-Dad-Poor-Dad-By-Robert-T.-Kiyosaki_u5wsxc.jpg" alt="Rich-Dad-Poor-Dad-By-Robert-T.-Kiyosaki">
                     <div class="product-details">
                         <h4>Rich Dad Poor Dad By Robert T. Kiyosaki</h4>
