--- a/BOOKS.html
+++ b/BOOKS.html
@@ -179,7 +179,7 @@
             </div>
 
             <div class="product-item">
-                <a href="SH009.html">
+                <a href="productPages/SH/SH009.html">
                     <img src="https://res.cloudinary.com/dmesnfesj/image/upload/v1759908126/Act-Like-A-Lady-Think-Like-A-Man-By-Steve-Harvey_xpzuit.jpg"
                         alt="Act-Like-A-Lady-Think-Like-A-Man-By-Steve-Harvey">
                     <div class="product-details">
@@ -190,7 +190,7 @@
             </div>
 
             <div class="product-item">
-                <a href="SH010.html">
+                <a href="productPages/SH/SH010.html">
                     <img src="https://res.cloudinary.com/dmesnfesj/image/upload/v1759908131/Dopamine-Detox-By-Thibaut-Meurisse_fjdhdu.jpg" alt="Dopamine-Detox-By-Thibaut-Meurisse">
                     <div class="product-details">
                         <h4>Dopamine Detox By Thibaut Meurisse</h4>
@@ -200,7 +200,7 @@
             </div>
 
             <div class="product-item">
-                <a href="SH011.html">
+                <a href="productPages/SH/SH011.html">
                     <img src="https://res.cloudinary.com/dmesnfesj/image/upload/v1759908166/The-48-Laws-Of-Power_wjqlue.jpg" alt="The-48-Laws-Of-Power">
                     <div class="product-details">
                         <h4>[B/W] The 48 Laws Of Power By Robert Greene</h4>
@@ -210,7 +210,7 @@
             </div>
 
             <div class="product-item">
-                <a href="SH012.html">
+                <a href="productPages/SH/SH012.html">
                     <img src="https://res.cloudinary.com/dmesnfesj/image/upload/v1759908138/GOOD-VIBES-GOOD-LIFE-by-VEX-KING_hdgjwv.jpg" alt="GOOD-VIBES-GOOD-LIFE-by-VEX-KING">
                     <div class="product-details">
                         <h4>Good Vibes, Good Life By Vex King</h4>
@@ -220,7 +220,7 @@
             </div>
 
             <div class="product-item">
-                <a href="SH013.html">
+                <a href="productPages/SH/SH013.html">
                     <img src="https://res.cloudinary.com/dmesnfesj/image/upload/v1759908130/Do-It-Today-By-Darius-Foroux_gpgoxm.jpg" alt="Do-It-Today-By-Darius-Foroux">
                     <div class="product-details">
                         <h4>Do It Today By Darius Foroux</h4>
@@ -230,7 +230,7 @@
             </div>
 
             <div class="product-item">
-                <a href="SH014.html">
+                <a href="productPages/SH/SH014.html">
                     <img src="https://res.cloudinary.com/dmesnfesj/image/upload/v1759908129/Cantt-Hurt-Me-By-David-Goggins_lrot0i.jpg" alt="Cantt-Hurt-Me-By-David-Goggins">
                     <div class="product-details">
                         <h4>Can't Hurt Me By David Goggins</h4>
@@ -239,7 +239,7 @@
                 </a>
             </div>
             <div class="product-item">
-                <a href="SH015.html">
+                <a href="productPages/SH/SH015.html">
                     <img src="https://res.cloudinary.com/dmesnfesj/image/upload/v1759908166/The-Art-Of-Laziness-By-Library-Mindset_yztau2.jpg" alt="The-Art-Of-Laziness-By-Library-Mindset">
                     <div class="product-details">
                         <h4>The Art Of Laziness By Library Mindset</h4>
@@ -248,7 +248,7 @@
                 </a>
             </div>
             <div class="product-item">
-                <a href="SH016.html">
+                <a href="productPages/SH/SH016.html">
                     <img src="https://res.cloudinary.com/dmesnfesj/image/upload/v1759908167/The-Concise-48-Laws-Of-Power-By-Robert-Greene_ttsb37.jpg" alt="The-Concise-48-Laws-Of-Power-By-Robert-Greene">
                     <div class="product-details">
                         <h4>The Concise 48 Laws Of Power By Robert Greene</h4>
