--- a/productPages/SH/SH014.html
+++ b/productPages/SH/SH014.html
@@ -5,28 +5,28 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Product Page - Brigade Store</title>
-    <link rel="stylesheet" href="des.css">
-    <link rel="icon" type="image/x-icon" href="Logo.png">
+    <title>Product Page - Kanglasha</title>
+    <link rel="stylesheet" href="../../frontend/css/des.css">
+    <link rel="icon" type="image/x-icon" href="https://res.cloudinary.com/dmesnfesj/image/upload/v1759908316/Favicon_h767nr.png">
 </head>
 
 <body>
     <!-- Header Section -->
     <header>
-        <a href="index.html" class="logo"><img src="Logo.png" alt="Brigade Store"></a>
+        <a href="../../index.html" class="logo"><img src="https://res.cloudinary.com/dmesnfesj/image/upload/v1759908327/Kanglasa.svg_jugx9c.png" alt="Kanglasha"></a>
         <ul class="navmenu">
-            <li><a href="index.html">Home</a></li>
-            <li><a href="BOOKS.html">Shop</a></li>
-            <li><a href="cart.html">Cart</a></li>
+            <li><a href="../../index.html">Home</a></li>
+            <li><a href="../../BOOKS.html">Shop</a></li>
+            <li><a href="../../cart.html">Cart</a></li>
         </ul>
         <div class="nav-icon">
-            <a href="cart.html"><i class="bx bx-user"></i></a>
+            <a href="../../cart.html"><i class="bx bx-user"></i></a>
         </div>
     </header>
 
     <section class="product-description">
         <div class="product-container">
-            <img src="Cantt-Hurt-Me-By-David-Goggins.jpg" alt="Cantt-Hurt-Me-By-David-Goggins"
+            <img src="https://res.cloudinary.com/dmesnfesj/image/upload/v1759908129/Cantt-Hurt-Me-By-David-Goggins_lrot0i.jpg" alt="Cantt-Hurt-Me-By-David-Goggins"
                 style="width: 42%; height: auto;">
             <div class="product-details">
                 <h4>Can't Hurt Me By David Goggins</h4>
@@ -39,7 +39,7 @@
                 </p>
                 <br>
                 <p>Price: <b>182 INR</b></p><Br>
-                <button class="ADDCART" onclick="addToCart('Can't Hurt Me By David Goggins', 182)">Add
+                <button class="ADDCART" onclick="addToCart(`Can't Hurt Me By David Goggins`, 182)">Add
                     to
                     Cart</button>
             </div>
@@ -47,10 +47,10 @@
     </section>
 
     <div class="end-text">
-        <p>©Brigade Store 2025. All Rights Reserved.</p>
+        <p>©Kanglasha 2025. All Rights Reserved.</p>
     </div>
 
-    <script src="sscript.js"></script>
+    <script src="../../frontend/javascript/sscript.js"></script>
 </body>
 
 </html>
