--- a/BOOKS.html
+++ b/BOOKS.html
@@ -277,7 +277,7 @@
         <section class="Adventure" id="Adventure"></section>
         Adventure<br><br>
         <div class="product-container">
-            <div class="product-item"><a href="AD001.html">
+            <div class="product-item"><a href="productPages/AD/AD001.html">
                     <img src="https://res.cloudinary.com/dmesnfesj/image/upload/v1759908199/Treasure-Island-By-Robert-Louis-Stevenson_prk1lu.jpg"
                         alt="Treasure-Island-By-Robert-Louis-Stevenson">
                     <div class="product-details">
@@ -285,7 +285,7 @@
                         <p>139 INR</p>
                 </a></div>
         </div>
-        <div class="product-item"><a href="AD002.html">
+        <div class="product-item"><a href="productPages/AD/AD002.html">
                 <img src="https://res.cloudinary.com/dmesnfesj/image/upload/v1759908146/Harry-Potter-And-the-Philosophers-Stone-By-J.-K.-Rowling_dog3yc.jpg"
                     alt="Harry-Potter-And-the-Philosophers-Stone-By-J.-K.-Rowling">
                 <div class="product-details">
@@ -293,7 +293,7 @@
                     <p>199 INR</p>
             </a></div>
         </div>
-        <div class="product-item"><a href="AD003.html">
+        <div class="product-item"><a href="productPages/AD/AD003.html">
                 <img src="https://res.cloudinary.com/dmesnfesj/image/upload/v1759908139/Harry-Potter-And-The-Chamber-Of-Secrets-By-J.-K.-Rowling_yafg2n.jpg"
                     alt="Harry-Potter-And-The-Chamber-Of-Secrets-By-J.-K.-Rowling">
                 <div class="product-details">
@@ -301,7 +301,7 @@
                     <p>199 INR</p>
             </a></div>
         </div>
-        <div class="product-item"><a href="AD004.html">
+        <div class="product-item"><a href="productPages/AD/AD004.html">
                 <img src="https://res.cloudinary.com/dmesnfesj/image/upload/v1759908146/Harry-Potter-And-The-Prisoner-Of-Azkaban-By-J.-K.-Rowling_ekqzrm.jpg"
                     alt="Harry-Potter-And-The-Prisoner-Of-Azkaban-By-J.-K.-Rowling">
                 <div class="product-details">
@@ -309,7 +309,7 @@
                     <p>199 INR</p>
             </a></div>
         </div>
-        <div class="product-item"><a href="AD005.html">
+        <div class="product-item"><a href="productPages/AD/AD005.html">
                 <img src="https://res.cloudinary.com/dmesnfesj/image/upload/v1759908140/Harry-Potter-And-The-Goblet-Of-Fire-By-J.-K.-Rowling_txlbcz.jpg"
                     alt="Harry-Potter-And-The-Goblet-Of-Fire-By-J.-K.-Rowling">
                 <div class="product-details">
@@ -317,7 +317,7 @@
                     <p>203 INR</p>
             </a></div>
         </div>
-        <div class="product-item"><a href="AD006.html">
+        <div class="product-item"><a href="productPages/AD/AD006.html">
                 <img src="https://res.cloudinary.com/dmesnfesj/image/upload/v1759908145/Harry-Potter-And-The-Order-Of-The-Phoenix-By-J.-K.-Rowling_jnjjmp.jpg"
                     alt="Harry-Potter-And-The-Order-Of-The-Phoenix-By-J.-K.-Rowling">
                 <div class="product-details">
@@ -325,7 +325,7 @@
                     <p>203 INR</p>
             </a></div>
         </div>
-        <div class="product-item"><a href="AD007.html">
+        <div class="product-item"><a href="productPages/AD/AD007.html">
                 <img src="https://res.cloudinary.com/dmesnfesj/image/upload/v1759908145/Harry-Potter-And-The-Half-Blood-Prince-By-J.-K.-Rowling_nc3wu8.jpg"
                     alt="Harry-Potter-And-The-Half-Blood-Prince-By-J.-K.-Rowling">
                 <div class="product-details">
@@ -333,7 +333,7 @@
                     <p>203 INR</p>
             </a></div>
         </div>
-        <div class="product-item"><a href="AD008.html">
+        <div class="product-item"><a href="productPages/AD/AD008.html">
                 <img src="https://res.cloudinary.com/dmesnfesj/image/upload/v1759908127/7-Harry-Potter-And-The-Deathly-Hallows-By-J.-K.-Rowling_iqlcrn.jpg"
                     alt="7-Harry-Potter-And-The-Deathly-Hallows-By-J.-K.-Rowling">
                 <div class="product-details">
@@ -356,7 +356,7 @@
         <section class="Fantasy" id="Fantasy"></section>
         Fantasy<br><br>
         <div class="product-container">
-            <div class="product-item"><a href="FS001.html">
+            <div class="product-item"><a href="/productPages/FS/FS001.html">
                     <img src="https://res.cloudinary.com/dmesnfesj/image/upload/v1759908127/Alices-Adventures-In-Wonderland-By-Lewis-Carroll_k9ihvy.jpg"
                         alt="Alices-Adventures-In-Wonderland-By-Lewis-Carroll">
                     <div class="product-details">
@@ -364,7 +364,7 @@
                         <p>118 INR</p>
                 </a></div>
         </div>
-        <div class="product-item"><a href="FS002.html">
+        <div class="product-item"><a href="/productPages/FS/FS002.html">
                 <img src="https://res.cloudinary.com/dmesnfesj/image/upload/v1759908176/The-Night-Circus-By-Erin-Morgenstern_naeg7q.jpg" alt="The-Night-Circus-By-Erin-Morgenstern">
                 <div class="product-details">
                     <h4>The Night Circus By Erin Morgenstern</h4>
