--- a/cart.html
+++ b/cart.html
@@ -5,23 +5,23 @@
   <meta charcet="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial scale=1.0">
-  <title>Cart - BrigadeStore</title>
-  <link rel="stylesheet" href="books.css">
+  <title>Cart - Kanglasha</title>
+  <link rel="stylesheet" href="frontend/css/books.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
       integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
       crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="stylesheet" href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">
-  <link rel="icon" type="image/x-icon" href="Logo.png">
+  <link rel="icon" type="image/x-icon" href="https://res.cloudinary.com/dmesnfesj/image/upload/v1759908316/Favicon_h767nr.png">
 
 </head>
 
 <body>
     <header>
-        <a href="index.html" class="logo"><img src="Logo.png" alt="Brigade Store"></a>
+        <a href="../../index.html" class="logo"><img src="https://res.cloudinary.com/dmesnfesj/image/upload/v1759908327/Kanglasa.svg_jugx9c.png" alt="Kanglasha"></a>
         <ul class="navmenu">
-            <li><a href="index.html">Home</a></li>
-            <li><a href="BOOKS.html">Shop</a></li>
-            <li><a href="cart.html">Cart</a></li>
+            <li><a href="../../index.html">Home</a></li>
+            <li><a href="../../BOOKS.html">Shop</a></li>
+            <li><a href="../../cart.html">Cart</a></li>
         </ul>
         <div class="nav-icon">
             <a href="user.html"><i class="bx bx-user"></i></a>
@@ -121,10 +121,10 @@
     </section>
 
     <div class="end-text">
-        <p>©Brigade Store 2025. All Rights Reserved.</p>
+        <p>©Kanglasha 2025. All Rights Reserved.</p>
     </div>
 
-    <script src="sscript.js"></script>
+    <script src="/frontend/javascript/sscript.js"></script>
 </body>
 
 </html>
