--- a/productPages/AD/AD001.html
+++ b/productPages/AD/AD001.html
@@ -5,29 +5,29 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Product Page - Brigade Store</title>
-    <link rel="stylesheet" href="des.css">
-    <link rel="icon" type="image/x-icon" href="Logo.png">
+    <title>Product Page - Kanglasha</title>
+    <link rel="stylesheet" href="../../frontend/css/des.css">
+    <link rel="icon" type="image/x-icon" href="https://res.cloudinary.com/dmesnfesj/image/upload/v1759908316/Favicon_h767nr.png">
 </head>
 
 <body>
     <!-- Header Section -->
     <header>
-        <a href="index.html" class="logo"><img src="Logo.png" alt="Brigade Store"></a>
+        <a href="../../index.html" class="logo"><img src="https://res.cloudinary.com/dmesnfesj/image/upload/v1759908327/Kanglasa.svg_jugx9c.png" alt="Kanglasha"></a>
         <ul class="navmenu">
-            <li><a href="index.html">Home</a></li>
-            <li><a href="BOOKS.html">Shop</a></li>
-            <li><a href="cart.html">Cart</a></li>
+            <li><a href="../../index.html">Home</a></li>
+            <li><a href="../../BOOKS.html">Shop</a></li>
+            <li><a href="../../cart.html">Cart</a></li>
         </ul>
         <div class="nav-icon">
-            <a href="cart.html"><i class="bx bx-user"></i></a>
+            <a href="../../cart.html"><i class="bx bx-user"></i></a>
         </div>
     </header>
 
     <section class="product-description">
         <div class="product-container">
-            <img src="Treasure-Island-By-Robert-Louis-Stevenson.jpg"
-                alt="The-Psychology-Of-Money-By-Morgan-Housel" style="width: 42%; height: auto;">
+            <img src="https://res.cloudinary.com/dmesnfesj/image/upload/v1759908199/Treasure-Island-By-Robert-Louis-Stevenson_prk1lu.jpg"
+                alt="Treasure-Island-By-Robert-Louis-Stevenson" style="width: 42%; height: auto;">
             <div class="product-details">
                 <h4>Treasure Island By Robert Louis Stevenson</h4>
                 <p>Treasure Island by Robert Louis Stevenson is a timeless adventure classic that takes
@@ -47,10 +47,10 @@
     </section>
 
     <div class="end-text">
-        <p>©Brigade Store 2025. All Rights Reserved.</p>
+        <p>©Kanglasha 2025. All Rights Reserved.</p>
     </div>
 
-    <script src="sscript.js"></script>
+    <script src="../../frontend/javascript/sscript.js"></script>
 </body>
 
 </html>
