--- a/BOOKS.html
+++ b/BOOKS.html
@@ -386,28 +386,28 @@
         <section class="Fiction" id="Fiction"></section>
         Fiction<br><br>
         <div class="product-container">
-            <div class="product-item"><a href="FC001.html">
+            <div class="product-item"><a href="/productPages/FC/FC001.html">
                     <img src="https://res.cloudinary.com/dmesnfesj/image/upload/v1759908199/To-Kill-A-Mockingbird-By-Harper-Lee_pdotlq.jpg" alt="To-Kill-A-Mockingbird-By-Harper-Lee">
                     <div class="product-details">
                         <h4>To Kill A Mockingbird By Harper Lee</h4>
                         <p>176 INR</p>
                 </a></div>
         </div>
-        <div class="product-item"><a href="FC002.html">
+        <div class="product-item"><a href="/productPages/FC/FC002.html">
                 <img src="https://res.cloudinary.com/dmesnfesj/image/upload/v1759908124/1984-by-George-Orwell_orwbrd.jpg" alt="1984-by-George-Orwell">
                 <div class="product-details">
                     <h4>1984 by George Orwell</h4>
                     <p>169 INR</p>
             </a></div>
         </div>
-        <div class="product-item"><a href="FC003.html">
+        <div class="product-item"><a href="/productPages/FC/FC003.html">
                 <img src="https://res.cloudinary.com/dmesnfesj/image/upload/v1759908155/Pride-And-Prejudice-By-Jane-Austen_bo35xh.jpg" alt="Pride-And-Prejudice-By-Jane-Austen">
                 <div class="product-details">
                     <h4>Pride And Prejudice By Jane Austen</h4>
                     <p>159 INR</p>
             </a></div>
         </div>
-        <div class="product-item"><a href="FC004.html">
+        <div class="product-item"><a href="/productPages/FC/FC004.html">
                 <img src="https://res.cloudinary.com/dmesnfesj/image/upload/v1759908177/The-Nightingale-By-Kristin-Hannah_ietuui.jpg" alt="The-Nightingale-By-Kristin-Hannah">
                 <div class="product-details">
                     <h4>The Nightingale By Kristin Hannah</h4>
@@ -429,21 +429,21 @@
         <section class="Horror" id="Horror"></section>
         Horror<br><br>
         <div class="product-container">
-            <div class="product-item"><a href="HR001.html">
+            <div class="product-item"><a href="productPages/HR/HR001.html">
                     <img src="https://res.cloudinary.com/dmesnfesj/image/upload/v1759908131/Dracula-By-Bram-Stoker_izpmjm.jpg" alt="Dracula-By-Bram-Stoker">
                     <div class="product-details">
                         <h4>Dracula By Bram Stoker</h4>
                         <p>206 INR</p>
                 </a></div>
         </div>
-        <div class="product-item"><a href="HR002.html">
+        <div class="product-item"><a href="productPages/HR/HR002.html">
                 <img src="https://res.cloudinary.com/dmesnfesj/image/upload/v1759908137/Frankenstein-By-Mary-Shelley_hb9b8r.jpg" alt="Frankenstein-By-Mary-Shelley">
                 <div class="product-details">
                     <h4>Frankenstein By Mary Shelley</h4>
                     <p>141 INR</p>
             </a></div>
         </div>
-        <div class="product-item"><a href="HR003.html">
+        <div class="product-item"><a href="productPages/HR/HR003.html">
                 <img src="https://res.cloudinary.com/dmesnfesj/image/upload/v1759908137/Gone-girl-By-Gillian-Flynn_rkw0gq.jpg" alt="Gone-girl-By-Gillian-Flynn">
                 <div class="product-details">
                     <h4>Gone Girl By Gillian Flynn</h4>
