--- a/BOOKS.html
+++ b/BOOKS.html
@@ -465,28 +465,28 @@
         <section class="Romance" id="Romance"></section>
         Romance<br><br>
         <div class="product-container">
-            <div class="product-item"><a href="RO001.html">
+            <div class="product-item"><a href="productPages/RO/RO001.html">
                     <img src="https://res.cloudinary.com/dmesnfesj/image/upload/v1759908152/Jane-Eyre-By-Charlotte-Bronte_idf395.jpg" alt="Jane-Eyre-By-Charlotte-Bronte">
                     <div class="product-details">
                         <h4>Jane Eyre By Charlotte Bronte</h4>
                         <p>199 INR</p>
                 </a></div>
         </div>
-        <div class="product-item"><a href="RO002.html">
+        <div class="product-item"><a href="productPages/RO/RO002.html">
                 <img src="https://res.cloudinary.com/dmesnfesj/image/upload/v1759908176/The-Love-hypothesis-By-Ali-Hazelwood_p8jiq5.jpg" alt="The-Love-hypothesis-By-Ali-Hazelwood">
                 <div class="product-details">
                     <h4>The Love Hypothesis By Ali Hazelwood</h4>
                     <p>189 INR</p>
             </a></div>
         </div>
-        <div class="product-item"><a href="RO003.html">
+        <div class="product-item"><a href="productPages/RO/RO003.html">
                 <img src="https://res.cloudinary.com/dmesnfesj/image/upload/v1759908130/Book-Lovers-By-Emily-Henry_p6y0wk.jpg" alt="Book-Lovers-By-Emily-Henry">
                 <div class="product-details">
                     <h4>Book Lovers By Emily Henry</h4>
                     <p>209 INR</p>
             </a></div>
         </div>
-        <div class="product-item"><a href="RO004.html">
+        <div class="product-item"><a href="productPages/RO/RO004.html">
                 <img src="https://res.cloudinary.com/dmesnfesj/image/upload/v1759908132/Every-Summer-After-By-Carley-Fortune_n7hzti.jpg" alt="Every-Summer-After-By-Carley-Fortune">
                 <div class="product-details">
                     <h4>Every Summer After By Carley Fortune</h4>
@@ -508,14 +508,14 @@
         <section class="DarkRomance" id="DarkRomance"></section>
         Dark Romance<br><br>
         <div class="product-container">
-            <div class="product-item"><a href="DR001.html">
+            <div class="product-item"><a href="productPages/DR/DR001.html">
                     <img src="https://res.cloudinary.com/dmesnfesj/image/upload/v1759908125/6-1_rh6402.jpg" alt="The Maddest Obsession By Danielle Lori">
                     <div class="product-details">
                         <h4>The Maddest Obsession By Danielle Lori</h4>
                         <p>232 INR</p>
                 </a></div>
         </div>
-        <div class="product-item"><a href="DR002.html">
+        <div class="product-item"><a href="productPages/DR/DR002.html">
                 <img src="https://res.cloudinary.com/dmesnfesj/image/upload/v1759908133/Corrupt-By-Penelope-Douglas-Devils-Night-Book-1_xuxybf.jpg"
                     alt="Corrupt-By-Penelope-Douglas-Devils-Night-Book-1">
                 <div class="product-details">
@@ -523,7 +523,7 @@
                     <p>310 INR</p>
             </a></div>
         </div>
-        <div class="product-item"><a href="DR003.html">
+        <div class="product-item"><a href="productPages/DR/DR003.html">
                 <img src="https://res.cloudinary.com/dmesnfesj/image/upload/v1759908152/Kingdom-Of-The-Wicked-By-Kerri-Maniscalco_x2jipi.jpg"
                     alt="Kingdom-Of-The-Wicked-By-Kerri-Maniscalco">
                 <div class="product-details">
@@ -531,7 +531,7 @@
                     <p>230 INR</p>
             </a></div>
         </div>
-        <div class="product-item"><a href="DR004.html">
+        <div class="product-item"><a href="productPages/DR/DR004.html">
                 <img src="https://res.cloudinary.com/dmesnfesj/image/upload/v1759908130/Bound-By-Honor-By-Cora-Reilly_mz2uup.jpg" alt="Bound-By-Honor-By-Cora-Reilly">
                 <div class="product-details">
                     <h4>Bound By Honor By Cora Reilly</h4>
