--- a/BOOKS.html
+++ b/BOOKS.html
@@ -275,7 +275,7 @@
     <!---ADVENTURE-->
     <section class="product-list">
         <section class="Adventure" id="Adventure"></section>
-        Adventure<br><br>
+        <h2>Adventure</h2><br><br>
         <div class="product-container">
             <div class="product-item"><a href="productPages/AD/AD001.html">
                     <img src="https://res.cloudinary.com/dmesnfesj/image/upload/v1759908199/Treasure-Island-By-Robert-Louis-Stevenson_prk1lu.jpg"
@@ -354,7 +354,7 @@
     <!--FANTASY-->
     <section class="product-list">
         <section class="Fantasy" id="Fantasy"></section>
-        Fantasy<br><br>
+        <h2>Fantasy</h2><br><br>
         <div class="product-container">
             <div class="product-item"><a href="/productPages/FS/FS001.html">
                     <img src="https://res.cloudinary.com/dmesnfesj/image/upload/v1759908127/Alices-Adventures-In-Wonderland-By-Lewis-Carroll_k9ihvy.jpg"
@@ -384,7 +384,7 @@
     <!--FICTION-->
     <section class="product-list">
         <section class="Fiction" id="Fiction"></section>
-        Fiction<br><br>
+        <h2>Fiction</h2><br><br>
         <div class="product-container">
             <div class="product-item"><a href="/productPages/FC/FC001.html">
                     <img src="https://res.cloudinary.com/dmesnfesj/image/upload/v1759908199/To-Kill-A-Mockingbird-By-Harper-Lee_pdotlq.jpg" alt="To-Kill-A-Mockingbird-By-Harper-Lee">
@@ -427,7 +427,7 @@
     <!--HORROR-->
     <section class="product-list">
         <section class="Horror" id="Horror"></section>
-        Horror<br><br>
+        <h2>Horror</h2><br><br>
         <div class="product-container">
             <div class="product-item"><a href="productPages/HR/HR001.html">
                     <img src="https://res.cloudinary.com/dmesnfesj/image/upload/v1759908131/Dracula-By-Bram-Stoker_izpmjm.jpg" alt="Dracula-By-Bram-Stoker">
@@ -463,7 +463,7 @@
     <!--ROMANCE-->
     <section class="product-list">
         <section class="Romance" id="Romance"></section>
-        Romance<br><br>
+        <h2>Romance</h2><br><br>
         <div class="product-container">
             <div class="product-item"><a href="productPages/RO/RO001.html">
                     <img src="https://res.cloudinary.com/dmesnfesj/image/upload/v1759908152/Jane-Eyre-By-Charlotte-Bronte_idf395.jpg" alt="Jane-Eyre-By-Charlotte-Bronte">
@@ -506,7 +506,7 @@
     <!--DARK ROMANCE-->
     <section class="product-list">
         <section class="DarkRomance" id="DarkRomance"></section>
-        Dark Romance<br><br>
+        <h2>Dark Romance</h2><br><br>
         <div class="product-container">
             <div class="product-item"><a href="productPages/DR/DR001.html">
                     <img src="https://res.cloudinary.com/dmesnfesj/image/upload/v1759908125/6-1_rh6402.jpg" alt="The Maddest Obsession By Danielle Lori">
@@ -551,30 +551,30 @@
     <!--YOUNG ADULT-->
     <section class="product-list">
         <section class="YA" id="YA"></section>
-        Young Adult<br><br>
+        <h2>Young Adult</h2><br><br>
         <div class="product-container">
-            <div class="product-item"><a href="YA001.html">
+            <div class="product-item"><a href="productPages/YA/YA001.html">
                     <img src="https://res.cloudinary.com/dmesnfesj/image/upload/v1759908175/The-Fault-In-Our-Stars-By-John-Green_t0nubr.jpg" alt="The-Fault-In-Our-Stars-By-John-Green">
                     <div class="product-details">
                         <h4>The Fault In Our Stars By John Green</h4>
                         <p>140 INR</p>
                 </a></div>
         </div>
-        <div class="product-item"><a href="YA002.html">
+        <div class="product-item"><a href="productPages/YA/YA002.html">
                 <img src="https://res.cloudinary.com/dmesnfesj/image/upload/v1759908165/Shatter-Me-By-Tahereh-Mafi_krusjq.jpg" alt="Shatter-Me-By-Tahereh-Mafi">
                 <div class="product-details">
                     <h4>Shatter Me By Tahereh Mafi</h4>
                     <p>163 INR</p>
             </a></div>
         </div>
-        <div class="product-item"><a href="YA003.html">
+        <div class="product-item"><a href="productPages/YA/YA003.html">
                 <img src="https://res.cloudinary.com/dmesnfesj/image/upload/v1759908200/We-Were-Liars-By-E.-Lockhart_dfocn0.jpg" alt="We-Were-Liars-By-E.-Lockhart">
                 <div class="product-details">
                     <h4>We Were Liars By E Lockhart</h4>
                     <p>205 INR</p>
             </a></div>
         </div>
-        <div class="product-item"><a href="YA004.html">
+        <div class="product-item"><a href="productPages/YA/YA004.html">
                 <img src="https://res.cloudinary.com/dmesnfesj/image/upload/v1759908126/A-Thousand-Boy-Kisses-By-Tillie-Cole_mjwoc6.jpg" alt="A-Thousand-Boy-Kisses-By-Tillie-Cole">
                 <div class="product-details">
                     <h4>A Thousand Boy Kisses By Tillie Cole</h4>
@@ -594,9 +594,9 @@
     <!--Autobiographies-->
     <section class="product-list">
         <section class="Autobiographies" id="Autobiographies"></section>
-        Autobiographies<br><br>
+        <h2>Autobiographies</h2><br><br>
         <div class="product-container">
-            <div class="product-item"><a href="AB001.html">
+            <div class="product-item"><a href="productPages/AB/AB001.html">
                     <img src="https://res.cloudinary.com/dmesnfesj/image/upload/v1759908175/The-Diary-Of-A-Young-Girl-By-Anne-Frank_x4cl1m.jpg"
                         alt="The-Diary-Of-A-Young-Girl-By-Anne-Frank">
                     <div class="product-details">
@@ -604,14 +604,14 @@
                         <p>172 INR</p>
                 </a></div>
         </div>
-        <div class="product-item"><a href="AB002.html">
+        <div class="product-item"><a href="productPages/AB/AB002.html">
                 <img src="https://res.cloudinary.com/dmesnfesj/image/upload/v1759908127/Becoming-By-Michelle-Obama_fh70zp.jpg" alt="Becoming-By-Michelle-Obama">
                 <div class="product-details">
                     <h4>Becoming By Michelle Obama</h4>
                     <p>175 INR</p>
             </a></div>
         </div>
-        <div class="product-item"><a href="AB003.html">
+        <div class="product-item"><a href="productPages/AB/AB003.html">
                 <img src="https://res.cloudinary.com/dmesnfesj/image/upload/v1759908137/Gandhi-My-Experiments-With-Truth-An-Autobiography-_dcmfvi.jpg"
                     alt="Gandhi-My-Experiments-With-Truth-An-Autobiography-">
                 <div class="product-details">
@@ -619,14 +619,14 @@
                     <p>179 INR</p>
             </a></div>
         </div>
-        <div class="product-item"><a href="AB004.html">
+        <div class="product-item"><a href="productPages/AB/AB004.html">
                 <img src="https://res.cloudinary.com/dmesnfesj/image/upload/v1759908200/Wings-Of-Fire-By-A.-P.-J.-Abdul-Kalam_cxvwjz.jpg" alt="Wings-Of-Fire-By-A.-P.-J.-Abdul-Kalam">
                 <div class="product-details">
                     <h4>Wings Of Fire By A. P. J. Abdul Kalam</h4>
                     <p>139 INR</p>
             </a></div>
         </div>
-        <div class="product-item"><a href="AB005.html">
+        <div class="product-item"><a href="productPages/AB/AB005.html">
                 <img src="https://res.cloudinary.com/dmesnfesj/image/upload/v1759908133/Dreams-From-My-Father-By-Barack-Obama-PRELOVED-_oiulvw.jpg"
                     alt="Dreams-From-My-Father-By-Barack-Obama-PRELOVED-">
                 <div class="product-details">
@@ -634,7 +634,7 @@
                     <p>Out Of Stock</p>
             </a></div>
         </div>
-        <div class="product-item"><a href="AB006.html">
+        <div class="product-item"><a href="productPages/AB/AB006.html">
                 <img src="https://res.cloudinary.com/dmesnfesj/image/upload/v1759908153/Mein-Kampf-By-Adolf-Hitler_echvid.jpg" alt="Mein Kampf-">
                 <div class="product-details">
                     <h4>Mein Kampf By Adolf Hitler</h4>
@@ -654,16 +654,16 @@
     <!--BIOGRAPHIES-->
     <section class="product-list">
         <section class="Biographies" id="Biographies"></section>
-        Biographies<br><br>
+        <h2>Biographies</h2><br><br>
         <div class="product-container">
-            <div class="product-item"><a href="BI001.html">
+            <div class="product-item"><a href="productPages/BI/BI001.html">
                     <img src="https://res.cloudinary.com/dmesnfesj/image/upload/v1759908166/Steve-Jobs-By-Walter-Isaacson_gnksnv.jpg" alt="Steve-Jobs-By-Walter-Isaacson">
                     <div class="product-details">
                         <h4>Steve Jobs By Walter Isaacson</h4>
                         <p>259 INR</p>
                 </a></div>
         </div>
-        <div class="product-item"><a href="BI002.html">
+        <div class="product-item"><a href="productPages/BI/BI002.html">
                 <img src="https://res.cloudinary.com/dmesnfesj/image/upload/v1759908127/bell-jar_tqgvop.jpg" alt="bell-jar">
                 <div class="product-details">
                     <h4>The Bell Jar By Sylvia Plath</h4>
@@ -684,23 +684,23 @@
     <!--HISTORY-->
     <section class="product-list">
         <section class="History" id="History"></section>
-        History<br><br>
+        <h2>History</h2><br><br>
         <div class="product-container">
-            <div class="product-item"><a href="HS001.html">
+            <div class="product-item"><a href="productPages/HS/HS001.html">
                     <img src="https://res.cloudinary.com/dmesnfesj/image/upload/v1759908154/Mossad-By-Michael-Bar-Zohar_zpho00.jpg" alt="Mossad-By-Michael-Bar-Zohar">
                     <div class="product-details">
                         <h4>Mossad By Michael Bar-Zohar</h4>
                         <p>200 INR</p>
                 </a></div>
         </div>
-        <div class="product-item"><a href="HS002.html">
+        <div class="product-item"><a href="productPages/HS/HS002.html">
                 <img src="https://res.cloudinary.com/dmesnfesj/image/upload/v1759908179/The-Wager-By-David-Grann_fciqxf.jpg" alt="The-Wager-By-David-Grann">
                 <div class="product-details">
                     <h4>The Wager By David Grann</h4>
                     <p>311 INR</p>
             </a></div>
         </div>
-        <div class="product-item"><a href="HS003.html">
+        <div class="product-item"><a href="productPages/HS/HS003.html">
                 <img src="https://res.cloudinary.com/dmesnfesj/image/upload/v1759908155/Mossad-Exodus-By-Gad-Shimron_gzkvjm.jpg" alt="Mossad-Exodus-By-Gad-Shimron">
                 <div class="product-details">
                     <h4>Mossad Exodus By Gad Shimron</h4>
@@ -720,7 +720,7 @@
     <!--EDUCATIONAL-->
     <section class="product-list">
         <section class="Educational" id="Educational"></section>
-        Educational<br><br>
+        <h2>Educational</h2><br><br>
         <div class="product-container">
             <div class="product-item"><a href="ED001.html">
                     <img src="https://res.cloudinary.com/dmesnfesj/image/upload/v1759908153/Mission-NDA_uhkjou.jpg" alt="Mission-NDA">
@@ -750,7 +750,7 @@
     <!--OTHERS-->
     <section class="product-list">
         <section class="Others" id="Others"></section>
-        Others<br><br>
+        <h2>Others</h2><br><br>
         <div class="product-container">
             Not Avaiable For Now ≧ ﹏ ≦
             <!--<div class="product-item"><a href="SH001.html">
