--- a/cart.html
+++ b/cart.html
@@ -24,7 +24,7 @@
             <li><a href="../../cart.html">Cart</a></li>
         </ul>
         <div class="nav-icon">
-            <a href="user.html"><i class="bx bx-user"></i></a>
+            <!--<a href="user.html"><i class="bx bx-user"></i></a>-->
         </div>
     </header>
 
