--- a/productPages/YA/YA004.html
+++ b/productPages/YA/YA004.html
@@ -5,28 +5,28 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Product Page - Brigade Store</title>
-    <link rel="stylesheet" href="des.css">
-    <link rel="icon" type="image/x-icon" href="Logo.png">
+    <title>Product Page - Kanglasha</title>
+    <link rel="stylesheet" href="../../frontend/css/des.css">
+    <link rel="icon" type="image/x-icon" href="https://res.cloudinary.com/dmesnfesj/image/upload/v1759908316/Favicon_h767nr.png">
 </head>
 
 <body>
     <!-- Header Section -->
     <header>
-        <a href="index.html" class="logo"><img src="Logo.png" alt="Brigade Store"></a>
+        <a href="../../index.html" class="logo"><img src="https://res.cloudinary.com/dmesnfesj/image/upload/v1759908327/Kanglasa.svg_jugx9c.png" alt="Brigade Store"></a>
         <ul class="navmenu">
-            <li><a href="index.html">Home</a></li>
-            <li><a href="BOOKS.html">Shop</a></li>
-            <li><a href="cart.html">Cart</a></li>
+            <li><a href="../../index.html">Home</a></li>
+            <li><a href="../../BOOKS.html">Shop</a></li>
+            <li><a href="../../cart.html">Cart</a></li>
         </ul>
         <div class="nav-icon">
-            <a href="cart.html"><i class="bx bx-user"></i></a>
+            <a href="../../cart.html"><i class="bx bx-user"></i></a>
         </div>
     </header>
 
     <section class="product-description">
         <div class="product-container">
-            <img src="A-Thousand-Boy-Kisses-By-Tillie-Cole.jpg" alt="A-Thousand-Boy-Kisses-By-Tillie-Cole" style="width: 42%; height: auto;">
+            <img src="https://res.cloudinary.com/dmesnfesj/image/upload/v1759908126/A-Thousand-Boy-Kisses-By-Tillie-Cole_mjwoc6.jpg" alt="A-Thousand-Boy-Kisses-By-Tillie-Cole" style="width: 42%; height: auto;">
             <div class="product-details">
                 <h4>A Thousand Boy Kisses By Tillie Cole</h4>
                 <p> A Thousand Boy Kisses by Tillie Cole is a heart-wrenching romance about love, loss, and 
@@ -46,10 +46,10 @@
     </section>
 
     <div class="end-text">
-        <p>©Brigade Store 2025. All Rights Reserved.</p>
+        <p>©Kanglasha 2025. All Rights Reserved.</p>
     </div>
 
-    <script src="sscript.js"></script>
+    <script src="../../frontend/javascript/sscript.js"></script>
 </body>
 
 </html>
