--- a/BOOKS.html
+++ b/BOOKS.html
@@ -722,7 +722,7 @@
         <section class="Educational" id="Educational"></section>
         <h2>Educational</h2><br><br>
         <div class="product-container">
-            <div class="product-item"><a href="ED001.html">
+            <div class="product-item"><a href="productPages/ED/ED001.html">
                     <img src="https://res.cloudinary.com/dmesnfesj/image/upload/v1759908153/Mission-NDA_uhkjou.jpg" alt="Mission-NDA">
                     <div class="product-details">
                         <h4>Mission NDA : Serve At Young Age (National Defence Academy Entrance Examination) | National
@@ -730,7 +730,7 @@
                         <p>489 INR</p>
                 </a></div>
         </div>
-        <div class="product-item"><a href="ED002.html">
+        <div class="product-item"><a href="productPages/ED/ED002.html">
                 <img src="https://res.cloudinary.com/dmesnfesj/image/upload/v1759908153/Mission-CDS_yqltlc.jpg" alt="Mission-CDS">
                 <div class="product-details">
                     <h4>Mission CDS : Combined Defence Services Entrance Examination for IMA, INA & AFA </h4>
